--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npm run build && cd server && node server.js",
     "server": "cd server && node server",
     "build": "cd client && npm run build",
-    "install": "cd client && npm install",
+    "install": "cd client && npm install && cd ../server && npm install",
     "client": "cd client && npm start"
   },
   "keywords": [],
